# awesome-landlord-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: test.yml
.github/workflows/: test.yml
src/: CMakeLists.txt  all.cpp  base.cpp  base.h  environment.cpp  environment.h  main.cpp  sample.cpp  strategy.cpp  strategy.h
src/strategy/: CMakeLists.txt  attacking_absolute_dominant_selector.cpp  attacking_bomb_rocket_selector.cpp  boom_terminator_selector.cpp  defend_boom_selector.cpp  defending_absolute_dominant_selector.cpp  defending_bomb_rocket_selector.cpp  empty_bomb_rocket_selector.cpp  full_enumeration_selector.cpp  minimal_selector.cpp  normal_selector.cpp  one_shot_selector.cpp  pass_selector.cpp  same_category_selector.cpp  selfish_1_selector.cpp  selfish_2_selector.cpp  selfish_selector.cpp  simple_evaluator.cpp  solo_selector.cpp
test/: CMakeLists.txt  base.cpp
test/strategy/: 0.cpp  1.cpp  2.cpp  3.cpp  defend_test.cpp
